--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "node": ">=5.0.0"
   },
   "dependencies": {
+    "es6-promise": "^3.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
   },
@@ -39,6 +41,7 @@
     "babel-preset-react": "^6.3.13",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
+    "jquery": "^3.0.0",
     "npm-run-all": "^2.1.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
