--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "node": ">=5.0.0"
   },
   "dependencies": {
+    "file-loader": "^0.8.5",
+    "ghpages": "0.0.8",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-favicon": "0.0.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel-loader": "^6.2.0",
@@ -37,8 +42,11 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-plugin-react": "^5.1.1",
+    "gh-pages": "^0.11.0",
+    "gh-pages-deploy": "^0.4.2",
     "jquery": "^3.0.0",
     "npm-run-all": "^2.1.1",
     "webpack": "^1.12.9",
@@ -46,11 +54,16 @@
   },
   "scripts": {
     "prebuild": "npm-run-all lint",
-    "build": "webpack --config config/webpack.config.prod.js",
+    "build:prod": "webpack --config config/webpack.config.prod.js",
     "build:dev": "webpack --config config/webpack.config.dev.js",
     "build:dev:watch": "webpack --config config/webpack.config.dev.js --watch",
     "server:dev": "webpack-dev-server --content-base src",
     "server:prod": "webpack-dev-server --content-base build",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf README.md src webroot package.json",
     "lint": "eslint ."
+  },
+  "gh-pages-deploy": {
+    "staticpath": "./build"
   }
 }
