added favicon and css loading again with .ttf loading

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,10 @@
   "plugins": [
     "react"
   ],
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "globals": {
     "document": false
   }
