--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=5.0.0"
   },
   "dependencies": {
+    "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "ghpages": "0.0.8",
     "react": "^0.14.6",
